kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision11.sem

interface Baz {
  a(): Integer
}

function Baz.Adapter(): Integer {
  Integer."1"
}
